SERVER-34108: Rebuild all indexes for a collection simultaneously at startup.

Index builds have a quirk that the only "unfinished" indexes allowed on a
collection are those that are being built. Additionally, all finished indexes
will be initialized from disk. Storage recovery at startup must rebuild all
indexes at the same time to avoid these failure code paths.